--- a/css/style.css
+++ b/css/style.css
@@ -704,6 +704,7 @@ html {
   position: fixed;
   bottom: 0px;
   right: 10px;
+  visibility: hidden;
   -webkit-transition: all 0.3s;
   -o-transition: all 0.3s;
   transition: all 0.3s;
